Updated allure report link section
Signed-off-by: KashyapDave95 <kashyap.dave@krishechnolabs.com>

--- a/.github/workflows/CI_CD_Integration_SanitySuite.yml
+++ b/.github/workflows/CI_CD_Integration_SanitySuite.yml
@@ -88,4 +88,4 @@ jobs:
 
       - name: Display Report Link
         run: |
-          echo "Allure Report can be accessed at: bateel-sanity-demo.magentoprojects.net"
+          echo "Allure Report can be accessed at: https://bateel-sanity-demo.magentoprojects.net"
