--- a/.github/workflows/CI_CD_Integration_LocalSuite.yml
+++ b/.github/workflows/CI_CD_Integration_LocalSuite.yml
@@ -3,7 +3,8 @@ name: CI/CD Integration Bateel - Local Suite
 on:
   push:
     branches:
-      - main  # Triggers on push to main branch
+      - main
+      - headless  # Triggers on push to main branch
   workflow_dispatch:  # Allows manual triggering
 
 jobs:
